[gd_scene load_steps=6 format=2]

[ext_resource path="res://PlayerOpp.tscn" type="PackedScene" id=1]
[ext_resource path="res://PlayerSelf.tscn" type="PackedScene" id=2]
[ext_resource path="res://Board.gd" type="Script" id=3]
[ext_resource path="res://art/8BitDeckAssets.png" type="Texture" id=4]
[ext_resource path="res://Discard.tscn" type="PackedScene" id=5]

[node name="Board" type="Control"]
margin_right = 900.0
margin_bottom = 600.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 900.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0.196078, 0.337255, 0.337255, 1 )

[node name="PlayerOpp" parent="." instance=ExtResource( 1 )]
mouse_filter = 2

[node name="PlayerSelf" parent="." instance=ExtResource( 2 )]
margin_top = 440.0
margin_bottom = 590.0

[node name="Draw1" type="Sprite" parent="."]
position = Vector2( 80, 273 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1, 1, 33, 45 )

[node name="Draw2" type="Sprite" parent="."]
position = Vector2( 830, 273 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1, 48, 33, 45 )

[node name="Discard" parent="." instance=ExtResource( 5 )]
margin_left = 23.0
margin_top = 179.0
margin_right = 19.0
margin_bottom = -207.0
mouse_filter = 2

[node name="PlayerOppName" type="Label" parent="."]
margin_left = 46.0
margin_top = 153.0
margin_right = 112.0
margin_bottom = 167.0
text = "PlayerOpp"

[node name="PlayerSelfName" type="Label" parent="."]
margin_left = 799.0
margin_top = 436.0
margin_right = 867.0
margin_bottom = 450.0
text = "PlayerSelf"
